myservicea.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservicea
  labels:
    app: my-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: my-app
