myserviceb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myserviceb
  labels:
    app: my-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30035
  selector:
    app: my-app
