myservicec.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservicec
  labels:
    app: my-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: my-app
