ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: myserviceb
            servicePort: 80
  - http:
      paths:
        - path: /b
          backend:
            serviceName: myservicec
            servicePort: 80
